--- a/Happyling/CustomCells/CompanyCell.xib
+++ b/Happyling/CustomCells/CompanyCell.xib
@@ -1,51 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="40" id="KGk-i7-Jjw" customClass="CompanyCell" customModule="Happyling" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="CompanyCell" customModule="Happyling" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NIs-DQ-Yll">
-                        <rect key="frame" x="8" y="8" width="44" height="44"/>
+                        <rect key="frame" x="8" y="17" width="44" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="44" id="0rY-hM-QVw"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="FQk-Ub-uAS"/>
+                            <constraint firstAttribute="width" constant="44" id="Jmg-eO-562"/>
+                            <constraint firstAttribute="height" constant="44" id="Qq3-ZG-4xP"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xWS-xC-K21">
-                        <rect key="frame" x="60" y="8" width="252" height="44"/>
+                        <rect key="frame" x="60" y="17" width="252" height="44"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="xWS-xC-K21" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Lxp-ba-Rea"/>
-                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="P0G-vS-3fi"/>
-                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Q8R-0u-Wyx"/>
-                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="bottom" secondItem="xWS-xC-K21" secondAttribute="bottom" id="VK4-1X-Zbd"/>
-                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="aq8-fb-u45"/>
-                    <constraint firstItem="xWS-xC-K21" firstAttribute="leading" secondItem="NIs-DQ-Yll" secondAttribute="trailing" constant="8" symbolic="YES" id="d4u-MO-6QW"/>
-                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="top" secondItem="xWS-xC-K21" secondAttribute="top" id="p0x-H7-mw1"/>
+                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="bottom" secondItem="xWS-xC-K21" secondAttribute="bottom" id="6qZ-8R-YOk"/>
+                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="CyK-0o-uIn"/>
+                    <constraint firstItem="xWS-xC-K21" firstAttribute="leading" secondItem="NIs-DQ-Yll" secondAttribute="trailing" constant="8" symbolic="YES" id="Ek8-Lc-LT2"/>
+                    <constraint firstItem="xWS-xC-K21" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="JjN-6F-C5Z"/>
+                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="9" id="Y7Z-Cs-lpq"/>
+                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="top" secondItem="xWS-xC-K21" secondAttribute="top" id="wGG-6p-fOm"/>
+                    <constraint firstItem="NIs-DQ-Yll" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="xW7-kD-rru"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="imgLogo" destination="NIs-DQ-Yll" id="t9l-BI-mS4"/>
                 <outlet property="lblName" destination="xWS-xC-K21" id="kUY-gq-eXT"/>
             </connections>
-            <point key="canvasLocation" x="-42" y="59"/>
+            <point key="canvasLocation" x="-42" y="69"/>
         </tableViewCell>
     </objects>
 </document>
