--- a/Happyling/CustomCells/ProblemsTableViewCell.xib
+++ b/Happyling/CustomCells/ProblemsTableViewCell.xib
@@ -5,80 +5,78 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="ProblemsTableViewCell" customModule="Happyling" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="ProblemsTableViewCell" customModule="Happyling" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yaz-EQ-I3F">
+                        <rect key="frame" x="8" y="8" width="252" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="m3T-5a-Al8"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Vj-0z-FLe">
+                        <rect key="frame" x="8" y="33" width="252" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="WN5-zn-3WL"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWM-9Y-7zP">
+                        <rect key="frame" x="8" y="62" width="252" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="LpT-n1-lDN"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQQ-Om-OU7">
+                        <rect key="frame" x="8" y="90" width="252" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ESS-k3-S9r">
-                        <rect key="frame" x="8" y="8" width="30" height="30"/>
-                    </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_sorting_arrows" translatesAutoresizingMaskIntoConstraints="NO" id="uQ8-2z-Eay">
-                        <rect key="frame" x="13" y="46" width="20" height="20"/>
+                        <rect key="frame" x="268" y="38" width="44" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="m5k-WK-YAB"/>
-                            <constraint firstAttribute="width" constant="20" id="rtF-2K-FrR"/>
+                            <constraint firstAttribute="height" constant="44" id="1w3-OA-sVh"/>
+                            <constraint firstAttribute="width" constant="44" id="pN5-wK-KOF"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Vj-0z-FLe">
-                        <rect key="frame" x="56" y="13" width="159" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWM-9Y-7zP">
-                        <rect key="frame" x="56" y="45" width="159" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yaz-EQ-I3F">
-                        <rect key="frame" x="223" y="13" width="89" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="89" id="rnH-dP-x2u"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQQ-Om-OU7">
-                        <rect key="frame" x="223" y="45" width="89" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="6Vj-0z-FLe" firstAttribute="baseline" secondItem="Yaz-EQ-I3F" secondAttribute="baseline" id="03y-t8-GLK"/>
-                    <constraint firstItem="uQ8-2z-Eay" firstAttribute="bottom" secondItem="gWM-9Y-7zP" secondAttribute="bottom" id="1QI-mR-ejp"/>
-                    <constraint firstItem="gWM-9Y-7zP" firstAttribute="firstBaseline" secondItem="zQQ-Om-OU7" secondAttribute="firstBaseline" id="306-63-ILq"/>
-                    <constraint firstItem="6Vj-0z-FLe" firstAttribute="firstBaseline" secondItem="Yaz-EQ-I3F" secondAttribute="firstBaseline" id="5Ph-PX-O9T"/>
-                    <constraint firstItem="ESS-k3-S9r" firstAttribute="centerY" secondItem="6Vj-0z-FLe" secondAttribute="centerY" id="Bka-jW-zIo"/>
-                    <constraint firstItem="uQ8-2z-Eay" firstAttribute="centerY" secondItem="gWM-9Y-7zP" secondAttribute="centerY" id="EcG-hK-jsq"/>
-                    <constraint firstItem="Yaz-EQ-I3F" firstAttribute="leading" secondItem="zQQ-Om-OU7" secondAttribute="leading" id="FCu-eA-gSr"/>
-                    <constraint firstItem="6Vj-0z-FLe" firstAttribute="leading" secondItem="ESS-k3-S9r" secondAttribute="trailing" constant="18" id="HBE-Cc-AP4"/>
-                    <constraint firstItem="6Vj-0z-FLe" firstAttribute="leading" secondItem="gWM-9Y-7zP" secondAttribute="leading" id="HUB-nW-1oZ"/>
-                    <constraint firstItem="Yaz-EQ-I3F" firstAttribute="trailing" secondItem="zQQ-Om-OU7" secondAttribute="trailing" id="LOn-X2-yo2"/>
-                    <constraint firstItem="ESS-k3-S9r" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Maa-So-I4M"/>
-                    <constraint firstItem="gWM-9Y-7zP" firstAttribute="baseline" secondItem="zQQ-Om-OU7" secondAttribute="baseline" id="OVP-iT-gbq"/>
-                    <constraint firstItem="ESS-k3-S9r" firstAttribute="centerX" secondItem="uQ8-2z-Eay" secondAttribute="centerX" id="TFd-eu-kbN"/>
-                    <constraint firstItem="gWM-9Y-7zP" firstAttribute="top" secondItem="6Vj-0z-FLe" secondAttribute="bottom" constant="11" id="TUt-8X-90S"/>
-                    <constraint firstItem="zQQ-Om-OU7" firstAttribute="leading" secondItem="gWM-9Y-7zP" secondAttribute="trailing" constant="8" symbolic="YES" id="UEF-pn-9aG"/>
-                    <constraint firstItem="Yaz-EQ-I3F" firstAttribute="leading" secondItem="6Vj-0z-FLe" secondAttribute="trailing" constant="8" symbolic="YES" id="X1L-Yx-qBu"/>
-                    <constraint firstItem="Yaz-EQ-I3F" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="ae0-II-4RU"/>
-                    <constraint firstItem="uQ8-2z-Eay" firstAttribute="top" secondItem="ESS-k3-S9r" secondAttribute="bottom" constant="8" symbolic="YES" id="cDn-DZ-JZ9"/>
-                    <constraint firstItem="gWM-9Y-7zP" firstAttribute="leading" secondItem="uQ8-2z-Eay" secondAttribute="trailing" constant="23" id="tFL-xR-N1l"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="uQ8-2z-Eay" secondAttribute="bottom" constant="5.5" id="w8W-EO-He6"/>
-                    <constraint firstItem="ESS-k3-S9r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="wBY-YX-eBn"/>
+                    <constraint firstItem="ESS-k3-S9r" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="IYU-kG-sB4"/>
+                    <constraint firstItem="ESS-k3-S9r" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="KeQ-QR-RK7"/>
+                    <constraint firstItem="gWM-9Y-7zP" firstAttribute="trailing" secondItem="zQQ-Om-OU7" secondAttribute="trailing" id="LLC-RA-zpf"/>
+                    <constraint firstItem="Yaz-EQ-I3F" firstAttribute="leading" secondItem="6Vj-0z-FLe" secondAttribute="leading" id="O4W-du-cdn"/>
+                    <constraint firstItem="ESS-k3-S9r" firstAttribute="leading" secondItem="gWM-9Y-7zP" secondAttribute="trailing" constant="8" symbolic="YES" id="Vu0-86-m4P"/>
+                    <constraint firstItem="gWM-9Y-7zP" firstAttribute="leading" secondItem="zQQ-Om-OU7" secondAttribute="leading" id="YmY-DB-e2G"/>
+                    <constraint firstItem="Yaz-EQ-I3F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Z95-tF-eGC"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="zQQ-Om-OU7" secondAttribute="bottom" constant="4" id="aIS-dI-NBq"/>
+                    <constraint firstItem="Yaz-EQ-I3F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="bvz-Rc-mjq"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Yaz-EQ-I3F" secondAttribute="trailing" constant="52" id="cgX-D8-g5W"/>
+                    <constraint firstItem="6Vj-0z-FLe" firstAttribute="top" secondItem="Yaz-EQ-I3F" secondAttribute="bottom" constant="4" id="dB4-IQ-UnX"/>
+                    <constraint firstItem="6Vj-0z-FLe" firstAttribute="leading" secondItem="gWM-9Y-7zP" secondAttribute="leading" id="fUA-PU-Qi6"/>
+                    <constraint firstItem="ESS-k3-S9r" firstAttribute="leading" secondItem="6Vj-0z-FLe" secondAttribute="trailing" constant="8" symbolic="YES" id="fqX-md-DcD"/>
+                    <constraint firstItem="Yaz-EQ-I3F" firstAttribute="trailing" secondItem="6Vj-0z-FLe" secondAttribute="trailing" id="qtI-yo-YvI"/>
+                    <constraint firstItem="ESS-k3-S9r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="30" id="sa2-nE-ntC"/>
+                    <constraint firstItem="zQQ-Om-OU7" firstAttribute="top" secondItem="gWM-9Y-7zP" secondAttribute="bottom" constant="7" id="skh-WJ-gaH"/>
+                    <constraint firstItem="gWM-9Y-7zP" firstAttribute="top" secondItem="6Vj-0z-FLe" secondAttribute="bottom" constant="8" symbolic="YES" id="vBg-Ga-vQ0"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -88,10 +86,7 @@
                 <outlet property="problemStatus" destination="zQQ-Om-OU7" id="VpU-T8-PfV"/>
                 <outlet property="problemSubject" destination="gWM-9Y-7zP" id="XHz-Wl-ks8"/>
             </connections>
-            <point key="canvasLocation" x="-138" y="-134"/>
+            <point key="canvasLocation" x="-138" y="-114"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="ic_sorting_arrows" width="40" height="40"/>
-    </resources>
 </document>
